# cowcord

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  justfile  shell.nix
.cargo/: config.toml
.devcontainer/: devcontainer.json  setup.sh
.github/ISSUE_TEMPLATE/: bug-report.md  feature-improvement-request.md
.github/workflows/: ci.yml  update-user-settings-proto.yml
crates/app/: Cargo.toml  Dioxus.toml  cargo.toml  input.css
crates/app/src/: cli.rs  main.rs
crates/app/src/components/ui/: button.rs
crates/app/src/utils/: console.rs  fingerprint.rs  local_storage.rs  mod.rs  request.rs  token.rs
crates/app/src/utils/guild/settings/: emojis.rs
crates/app/src/views/: home.rs  mod.rs  not_found.rs
crates/app/src/views/auth/: login.rs
crates/app/src/views/channels/: me.rs
crates/app/src/ws/: remote_auth.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/discord-api/: Cargo.toml  README.md
crates/discord-api-types/: Cargo.toml  README.md
crates/discord-api-types/src/: lib.rs
crates/discord-api/src/: lib.rs
crates/discord-api/src/endpoints/: cdn.rs  experiments.rs  mod.rs
crates/discord-api/src/endpoints/auth/: login.rs
crates/discord-api/src/macros/: crossplatform.rs  mod.rs
crates/discord-api/src/types/: error.rs  locale.rs  mod.rs  super_properties.rs  token.rs
crates/discord-api/src/types/ws/: mod.rs  remote_auth.rs
crates/discord-types/: Cargo.toml  README.md  cargo.toml  mod.rs
crates/discord-types/api/: application.rs  audit_log.rs  entitlements.rs  guild_scheduled_event.rs  mod.rs  presences.rs  stickers.rs  webhooks.rs
crates/discord-types/api/endpoints/: audit_log.rs  directory.rs  discovery.rs  family_center.rs  guild_template.rs
crates/discord-types/src/: lib.rs  utils.rs
crates/discord-types/src/api/: application.rs  audit_log.rs  auth.rs  auto_moderation.rs  channel.rs  components.rs  connected_accounts.rs  directory_entries.rs  discovery.rs  emoji.rs  entitlements.rs  family_center.rs  guild.rs  guild_scheduled_event.rs  guild_templates.rs  integrations.rs  invites.rs  lobbies.rs  messages.rs  mod.rs  premium_referral.rs  presences.rs  quests.rs  relationships.rs  soundboard.rs  stage_instances.rs  stickers.rs  teams.rs  user_settings_proto.proto  users.rs  voice.rs  webhooks.rs  websocket.rs
crates/discord-types/src/api/endpoints/: application.rs  audit_log.rs  auth.rs  auto_moderation.rs  channel.rs  connected_accounts.rs  directory.rs  directory_entries.rs  discovery.rs  emoji.rs  entitlements.rs  family_center.rs  guild.rs  guild_template.rs  guild_templates.rs  integrations.rs  invites.rs  lobbies.rs  mod.rs  websocket.rs
crates/discord-types/src/common/: error_codes.rs  hex.rs  image.rs  locale.rs  mod.rs
crates/discord-types/src/common/id/: id.rs  mod.rs
crates/discord-types/src/utils/: mod.rs  url.rs
crates/hex/: Cargo.toml  README.md
crates/hex/src/: lib.rs  tests.rs
crates/hex/src/de/: num.rs  str.rs
crates/hex/src/ser/: num.rs  str.rs
crates/macros/: Cargo.toml
crates/macros/src/: crossplatform.rs
crates/ws/: Cargo.toml  LICENSE
crates/ws/src/: lib.rs
nix/: deps.nix  package.nix
scripts/: update-user-settings
scripts/update/: error-codes.sh
scripts/update-error-codes/: Cargo.toml
scripts/update-error-codes/src/: main.rs
scripts/update-user-protos/: Cargo.toml  header.txt
scripts/update-user-protos/src/: main.rs
scripts/update/protos/: user.sh
src/models/api_types/: channel.rs  family_center.rs  guild.rs  integrations.rs  invites.rs  lobbies.rs  mod.rs  premium_referral.rs  relationships.rs  stage_instances.rs  teams.rs  user_settings_proto.proto  users.rs
src/models/endpoints/: application.rs  channel.rs  emoji.rs  guild.rs
src/models/types/: mod.rs
