[workspace]
members = ["crates/*"]
resolver = "3"
default-members = ["crates/app"]

[workspace.dependencies]
hex = { path = "crates/hex" }
discord-api-types = { path = "crates/discord-api-types" }

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
incremental = true

[profile.wasm-dev]
inherits = "dev"

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
