[workspace]
members = ["crates/*"]
resolver = "3"
default-members = ["crates/app"]

[workspace.dependencies]
hex = { path = "crates/hex" }
discord-api = { path = "crates/discord-api" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
base64 = "0.22.1"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
incremental = true

[profile.wasm-dev]
inherits = "dev"
