[package]
name = "cowcord"
version = "0.0.1"
edition = "2024"

[dependencies]
# app core
tokio = "1.49.0"
dioxus = { version = "0.7.3", features = ["router", "desktop"] }
lucide-dioxus = { version = "2.563.0", features = ["all-icons"] }
tailwind_fuse = "0.3.2"

# requests
discord-api = { workspace = true }
wreq = { version = "6.0.0-rc.28", features = ["json", "multipart", "prefix-symbols"] }
wreq-util = "3.0.0-rc.10"

# ser/de
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
fast_qr = { version = "0.13.1", features = ["svg"] }

# ws
futures = "0.3.31"
tokio-tungstenite = { version = "0.27.0", features = ["rustls-tls-native-roots"] } # todo: could use wreq for this?

# logging
tracing-subscriber = "0.3.22"
tracing = "0.1.44"

# encryption
sha2 = "0.10.9"
rsa = { version = "0.9.10", features = ["pkcs5", "getrandom"] }
rustls = { version = "0.23.27", default-features = false, features = ["ring"] }

# keyring
keyring-core = "0.7.2"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "0.2.2", features = ["keychain", "protected"] }
[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "openbsd"))'.dependencies]
dbus-secret-service-keyring-store = { version = "0.3.3", features = ["crypto-rust", "vendored"] }
[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "0.5.1"
