[package]
name = "discord-api"
description = "Provides typings for discord api objects and discord endpoints."

version = "0.0.1"
edition = "2024"

license = "Unlicense"
repository = "https://github.com/cowcord/cowcord"
readme = "README.md"

[dependencies]
const_format = { version = "0.2.35", features = ["fmt"] }
cowcord-macros = { workspace = true }

# serialization/deserialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = "0.7.1"
base64 = { workspace = true }
uuid = { version = "1.22.0", features = ["v4", "serde"] }

[features]
# default = ["chrono"]

# chrono = ["dep:chrono", "typesize?/chrono"]

